# pongrobot-core

./: CMakeLists.txt  README.md  package.xml
config/: launcher_config.yaml  rate_config.yaml
include/: TrajectoryManager.h
launch/: launcher.launch  launcher_headless.launch  launcher_test.launch  manager.launch
rviz/: trajectory_visualizer.rviz
scripts/: launcher_node.py  vesc_node.py  vesc_node_oop.py
sketch/launcherNode/: launcherNode.ino
sketch/launcherNode_noRos/: launcherNode_noRos.ino
src/: 3  TrajectoryManager.cpp  trajectory_manager_node.cpp
utils/: 12-vesc.rules  vesc_count  vesc_count.py
