<?xml version="1.0"?>
<package format="2">
  <name>pongrobot_core</name>
  <version>0.0.0</version>
  <description>The pongrobot_core package</description>

  <maintainer email="andrew@andrewtgutierrez.com">Andrew Gutierrez</maintainer>
  <license>BSD</license>
  <author email="andrew@andrewtgutierrez.com">Andrew Gutierrez</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python-pyvesc</exec_depend>
  <exec_depend>python-pythoncrc</exec_depend>
  <exec_depend>python-pyserial</exec_depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>

</package>
